Changelog
=========


1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2016-09-26)
------------------

- Initial implementation [jone]